--- a/csss/styles.css
+++ b/csss/styles.css
@@ -28,7 +28,7 @@ h1{
   margin-top: 30px;
 }
 .labels{
-  font-family: monospace;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-weight: lighter;
   font-size: 20px;
   color: #53866c;
@@ -39,7 +39,7 @@ h1{
   padding: 10px;
   color: #548b82;
   font-size: 18px;
-  font-family: 'calibri', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
 .q-text{
