--- a/csss/styles.css
+++ b/csss/styles.css
@@ -45,7 +45,7 @@ h1{
 .q-text{
   color: #548b83;
   text-align: center;
-  font-family: 'Khula', fantasy;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 20px;
 }
 .genders{
@@ -56,7 +56,7 @@ h1{
   margin-left: 50px;
   margin-top: 20px;
   height: 45px;
-  width: 200px;
+  width: 190px;
   border-radius: 20px;
 }
 
