--- a/csss/styles.css
+++ b/csss/styles.css
@@ -15,7 +15,7 @@ h1{
   background-repeat: no-repeat;
   background-size: cover;
   background-image: #696f80;
-  box-shadow: 1px 0px 2px #ffffff;
+  box-shadow: 1px 0px 2px #ffffff81;
 }
 
 .akan{
