--- a/csss/styles.css
+++ b/csss/styles.css
@@ -21,7 +21,7 @@ h1{
 .akan{
   font-size: 40px;
   padding-top: 20px;
-  font-weight: bolder;
+  font-weight: bold;
   font-family: system-ui;
 }
 .top-form{
